--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   firebase_core: ^3.6.0
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
